# ODEVLER

./: (Türkçe) Derya Selin Ateş NESNE MAKALE .docx  (Türkçe) VERİ Derya Selin Ateş Makale docx.docx  (İngilizce) Derya Selin Ateş NESNE MAKALE .docx  (İngilizce) VERİ Derya Selin Ateş Makale  docx.docx  README.md
PhishingDetectionEngine/: .gitignore  CMakeLists.txt  Untitled-1.txt  blacklist.txt  phishing_keywords.txt  whitelist.txt
PhishingDetectionEngine/include/analyzers/: BlacklistAnalyzer.h  ContentAnalyzer.h  DomainAnalyzer.h  EmailHeaderAnalyzer.h  IAnalyzer.h  URLAnalyzer.h
PhishingDetectionEngine/include/core/: PhishingEngine.h  ScanInput.h  ScanReport.h  ScanResult.h  ThreatScore.h
PhishingDetectionEngine/include/ui/: ConsoleUI.h
PhishingDetectionEngine/include/utils/: Database.h  Enums.h  Exceptions.h  Logger.h
PhishingDetectionEngine/src/: main.cpp
PhishingDetectionEngine/src/analyzers/: BlacklistAnalyzer.cpp  ContentAnalyzer.cpp  DomainAnalyzer.cpp  EmailHeaderAnalyzer.cpp  URLAnalyzer.cpp
PhishingDetectionEngine/src/core/: PhishingEngine.cpp  ScanInput.cpp  ScanReport.cpp  ScanResult.cpp  ThreatScore.cpp
PhishingDetectionEngine/src/ui/: ConsoleUI.cpp
PhishingDetectionEngine/src/utils/: Logger.cpp
